# stream_converter

./: Makefile  README.md  pyproject.toml
examples/: bytes_converter.py  convert_function_stream.py  convert_generator_stream.py  microphone_stream.py  stream_converter.py  stream_function_converter.py  stream_object_converter.py
src/stream_converter/: converter.py
src/streaming_whisper/: converter.py  microphone_stream.py
