
[project]
name = "streaming_whisper"
version = "0.1.0"
description = "A streaming version of Whisper to handle real-time audio inputs."
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "pyaudio>=0.2.14",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
