
[project]
name = "stream_converter"
version = "0.1.0"
description = "A package for applying real-time transformations on streaming data."
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "pyaudio>=0.2.14",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

